A little transactions page blurb

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -129,6 +129,9 @@ passportPlayerNotFound = The player was not found.
 #
 # Transaction history
 
+moneyTip = This page displays everything you need to know about the coins and bars that you''ve \
+           been earning and spending in Whirled.
+
 transactionsTitle = Transactions
 transactionsNone = No recent transactions of this type
 
