For photos, display the full-sized version in rooms and the 320x200 version in shop preview windows and galleries, unless it doesn't exist in which case use the thumbnail.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -20,6 +20,9 @@ editorInfoTab = Item Info
 
 editorFurniTab = Furniture Media
 editorFurniTitle = Image shown when Item is placed in the World as Furniture
+editorPhotoFurniTab = Preview Media
+editorPhotoFurniTitle = Image shown as a preview on Gallery pages
+
 editorThumbTab = Thumbnail Media
 editorThumbTitle = Small image shown in My Stuff and the Shop
 editorThumbHint = Max size: {0}x{1}. Larger images will be scaled down to that size.
