Returning the old info lines. Cramming it in under the item description for now.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -51,11 +51,9 @@ catalogClearFilter = (show all)
 # ListingDetailPanel
 
 listingPurchases = Purchases:
+listingListed = Listed on:
 
 listingBuy = Buy!
-
-listingAltTip = Or buy with {0}:
-listingBuyAlt = Buy
 
 listingBuyBars = Get bars!
 
@@ -92,7 +90,6 @@ boughtOtherUsage = Click above to add your new item to this room!
 favoritesCount = Favorites:
 
 buyBars = Get Bars
-listedOn = Listed on {0}
 
 #
 # FavoritesPanel
