Transactions page style tweaks.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -142,6 +142,8 @@ reportBling = Bling
 reportCreator = Creator
 reportAffiliates = Affiliates
 
+buyBars = Buy Bars!
+
 blingHeader = Bling
 blingBalance = Bling Balance:
 blingWorth = Bling Worth (USD):
