* Added fields so the user can specify their billing information when cashing out. * Added an extra password check on cash out. * Re-enabled cash out for users.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -158,8 +158,24 @@ blingInvalidAmount = You must specify an amount of at least 1 bling.
 blingExchangeSuccessful = Your bling has been exchanged for bars successfully.
 blingCashOutHeader = Cash Out Your Bling!
 blingCashOutDescription = Cash out some or all of your bling by specifying the amount and clicking \
-	"Cash Out".  It may take 3-5 business days to process your request.
+	"Cash Out".  It may take 3-5 business days to process your request.  Cash out requests are \
+	fulfilled to a particular PayPal account; please make sure you provide the correct PayPal \
+	email address below.
 blingCashOutAmount = Amount to cash out:
 blingCashOutButton = Cash Out
 cashOutRequestSuccessful = Your request to cash out your bling has been submitted.
 cashedOutBling = Cash out request of {0} bling for {1} currently pending.
+fieldRequired = {0} is required.
+fieldTemplate = {0}:
+cashOutPassword = Password
+cashOutPayPalEmail = PayPal Email Address
+cashOutConfirmPayPalEmail = Confirm PayPal Email Address
+cashOutFirstName = First Name
+cashOutLastName = Last Name
+cashOutPhoneNumber = Phone Number
+cashOutStreetAddress = Street Address
+cashOutCity = City
+cashOutState = State
+cashOutPostalCode = Zip Code
+cashOutCountry = Country
+cashOutEmailsDontMatch = The PayPal email addresses do not match.  Please make sure the email address is correct.
