Updated transaction translations.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -305,9 +305,9 @@ m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_affiliate = Referred player <a href="/#people-{1}">{0}</a> purchased an item.
 m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
-m_invitee_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
-m_guest_transfer = Transferred coins from your guest account when you registered.
-m_created_account = Some coins to start with. Welcome to Whirled!
+m_invited_friend_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
+m_transfer_from_guest = Transferred coins from your guest account when you registered.
+m_created_account = Some coins for you to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
 m_earned_badge = Award for earning the {1} {0} badge.
 m_bought_bars = Bought bars for {0}.
@@ -316,3 +316,4 @@ m_exchanged_for_bars = Exchanged for bars.
 m_exchanged_from_bling = Exchanged from bling.
 m_cancel_cash_out = Bling cash out canceled: {0}.
 m_request_cash_out = A request to cash out {0} bling has been submitted.
+m_support_adjusted = Adjustment made by Whirled staff, <a href="/people-{1}">{0}</a>.
