Use narya's bureau log redirector. Make game-server.log and bureau-launcher.log more readable when bureau output ios merged.

--- a/etc/log4j-bureaulauncher.properties
+++ b/etc/log4j-bureaulauncher.properties
@@ -11,5 +11,16 @@ log4j.appender.fileappender.layout = org.apache.log4j.PatternLayout
 log4j.appender.fileappender.layout.ConversionPattern = %d %p %C{1}: %m%n
 log4j.appender.fileappender.File = log/bureau-launcher.log
 
+# Redirection of bureau output goes to the game server log with lines prefixed by thread name (bureau id)
+log4j.logger.com.threerings.bureau.util.BureauLogRedirector = info, bureauappender
+
+# Make sure the lines do not get printed twice
+log4j.additivity.com.threerings.bureau.util.BureauLogRedirector = false
+
+log4j.appender.bureauappender = org.apache.log4j.FileAppender
+log4j.appender.bureauappender.layout = org.apache.log4j.PatternLayout
+log4j.appender.bureauappender.layout.ConversionPattern = %t| %m%n
+log4j.appender.bureauappender.File = log/bureau-launcher.log
+
 # Specify logging levels as desired
 # log4j.logger.com.threerings.foo = info
