--- a/etc/log4j-bureaulauncher-production.properties
+++ b/etc/log4j-bureaulauncher-production.properties
@@ -16,10 +16,10 @@ log4j.appender.fileappender.Email = msoy-logs@threerings.net
 log4j.appender.fileappender.PruneDays = 7
 
 # Redirection of bureau logs goes to a merged file with lines prefixed by thread name (bureau id)
-log4j.logger.com.threerings.msoy.bureau.client.BureauLogRedirector = info, bureauappender
+log4j.logger.com.threerings.bureau.util.BureauLogRedirector = info, bureauappender
 
 # Make sure the lines do not also spam the launcher log
-log4j.additivity.com.threerings.msoy.bureau.client.BureauLogRedirector = false
+log4j.additivity.com.threerings.bureau.util.BureauLogRedirector = false
 
 log4j.appender.bureauappender = com.threerings.msoy.bureau.client.BureauFileAppender
 log4j.appender.bureauappender.layout = org.apache.log4j.PatternLayout
