Style up and finish functionality of the gallery pages.  Almost done!

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -65,5 +65,12 @@ galleryNotFound = not find gallery.
 newGallery = New Gallery
 onePhoto = 1 Photo
 photoCount = {0} Photos
-slideshowStart = Slideshow
-slideshowStop = Stop
+galleryNoThumbnail = drag image here
+gallerySlideshowStart = Slideshow
+gallerySlideshowStop = Stop Slideshow
+galleryViewAll = View all of this player''s Galleries
+galleryPhotoListTitle = Your Photos
+galleryUploadPhotos = Upload Photos
+galleryDragInstructions1 = Drag images from below to add them to this Gallery.
+galleryDragInstructions2 = (Drag outside this box to remove them.)
+
