Made it possible to break an item's configuration up into sub-tabs. Did so with the game configuration.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -79,11 +79,19 @@ gameTip = The SWF file for your game
 
 errGameNotFlash = Game media must be flash (SWF) files.
 
-gameServerHeadingTip = The following fields are only needed for games that employ a server agent
+gameTabConfig = Configuration
+gameTabCode = Code
+gameTabMedia = Media
+gameTabExtras = Extras
+
 gameServerMediaLabel = Server Agent Code
-gameServerMediaTip = An .abc file containing your server agent.
+gameServerMediaTip = An .abc file containing your server agent. Only needed for games that \
+  have a server component.
 gameServerClass = Server Agent Class
-gameServerClassTip = Full name of the class to instantiate (leave blank for default)
+gameServerClassTip = Full name of the class to instantiate (leave blank for default).
+
+gameAVRG = AVR Game?
+gameAVRGTip = If your game uses AVRGameControl it is an AVR Game.
 
 gameShotTab = Screenshot
 gameShotTitle = This is displayed on your game''s info page
@@ -97,8 +105,6 @@ gameWatchable = Watchable?
 
 gameDefinition = Custom Parameters
 gameDefinitionError = Failed to parse your custom parameter: {0}
-
-gameAVRG = AVR Game?
 
 gameWhirledLabel = Whirled
 gameWhirledTip = The Whirled associated with this game (you must be a manager)
