--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -107,12 +107,12 @@ gameDefinition = Custom Parameters
 gameDefinitionError = Failed to parse your custom parameter: {0}
 
 gameWhirledLabel = Whirled
-gameWhirledTip = The Whirled associated with this game (you must be a manager)
+gameWhirledTip = The Whirled associated with this game (you must be a manager).
 gameWhirledNone = None
 
 gameShopTag = Shop Tag
 gameShopTagTip = Items that are listed in the catalog, created by you and \
-  tagged with this tag will show up in your game shop
+  tagged with this tag will show up in your game shop.
 
 errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x{1} pixels.
 
