Updated remix-before-you-buy to work with the new buying mechanism.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -94,6 +94,11 @@ buyBars = Get Bars
 limitedPurchases = {0} of {1}
 
 #
+# BuyRemixPanel
+buyRemixTitle = Buy this remix?
+buyRemixPrompt = To save this remix, you must buy this item.
+
+#
 # FavoritesPanel
 
 memberFavorites = {0}''s Favorites
