Coin deducting UI for support agents.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -179,3 +179,7 @@ cashOutState = State
 cashOutPostalCode = Zip Code
 cashOutCountry = Country
 cashOutEmailsDontMatch = The PayPal email addresses do not match.  Please make sure the email address is correct.
+
+deductTip = Deduct coins:
+deductButton = Deduct
+deductSuccess = Successfully deducted {0} coins.
