Translate errors the right way.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -96,6 +96,8 @@ insufficient_bling = Oops. You don''t have enough bling.
 already_cashed_out = You cannot cash out bling until your current request has been fulfilled.
 below_minimum_bling = You cannot cash out less than 500 bling.
 
+money_overdrawn = The account doesn''t have enough money to deduct that much!
+
 #
 # Admin messages
 
