Validate ABC files on game upload page

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -92,6 +92,7 @@ gameServerClassTip = Full name of the class to instantiate (leave blank for defa
 
 gameAVRG = AVR Game?
 gameAVRGTip = If your game uses AVRGameControl it is an AVR Game.
+errMediaNotABC = Server agent media must be a compiled actionscript binary (.abc) file.
 
 gameShotTab = Screenshot
 gameShotTitle = This is displayed on your game''s info page
