Replace the Friends tab with a Stuff tab, which right now takes you to your avatars.  Add a Friends sub-link under Me.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -181,7 +181,7 @@ genre8 = MMO / Whirled
 # Default page titles
 
 meTitle = Me
-friendsTitle = Friends
+stuffTitle = Stuff
 gamesTitle = Games
 whirledsTitle = Whirleds
 shopTitle = Shop
