--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -35,7 +35,7 @@ charRemaining = (Characters remaining: {0})
 # Navigation menu and header
 
 menuMe = Me
-menuFriends = Friends
+menuStuff = Stuff
 menuWorlds = Whirleds
 menuGames = Games
 menuShop = Shop
