The adminz GWT module in msoy was conflicting with a similar module in underwire (admin).  The source package and public files directory were named the same, and this caused underwire's files to overwrite files that happened to be named the same in adminz, such as admin.css.  Changed the "admin" directory names in msoy to "adminz" to avoid this conflict.

--- a/src/gwt/adminz.gwt.xml.in
+++ b/src/gwt/adminz.gwt.xml.in
@@ -5,10 +5,10 @@
   <source path="com/threerings/msoy/money/data/all"/>
   <source path="com/threerings/msoy/money/gwt"/>
 
-  <source path="client/admin"/>
+  <source path="client/adminz"/>
 
-  <public path="public/admin"/>
-  <stylesheet src="admin.css"/>
+  <public path="public/adminz"/>
+  <stylesheet src="adminz.css"/>
 
-  <entry-point class="client.admin.AdminPage"/>
+  <entry-point class="client.adminz.AdminPage"/>
 </module>
