--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -131,7 +131,7 @@ passportPlayerNotFound = The player was not found.
 
 moneyTip = This page displays everything you need to know about the coins and bars that you''ve \
            been earning and spending in Whirled.
-barsTip = Earning coins takes time. Get bars right now!
+barsTip = Earning coins takes time.<br/>Get bars right now!
 
 transactionsTitle = Transactions
 transactionsNone = No recent transactions of this type
