Added a "Photos of Me" link under the profile image.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -36,6 +36,8 @@ roomsMineIntro = These are all of your rooms. Click a room to enter it.
 #
 # ProfileBlurb
 
+photosOfMe = Photos of Me
+
 profileLoadFailed = Missing profile details.
 profileEdit = Edit Profile
 
