--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -68,7 +68,7 @@ photoCount = {0} Photos
 galleryNoThumbnail = drag image here
 gallerySlideshowStart = Slideshow
 gallerySlideshowStop = Stop Slideshow
-galleryViewAll = View all of this player''s Galleries
+galleryViewAll = View All Galleries
 galleryPhotoListTitle = Your Photos
 galleryUploadPhotos = Upload Photos
 galleryDragInstructions1 = Drag images from below to add them to this Gallery.
