--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -316,4 +316,4 @@ m_exchanged_for_bars = Exchanged for bars.
 m_exchanged_from_bling = Exchanged from bling.
 m_cancel_cash_out = Bling cash out canceled: {0}.
 m_request_cash_out = A request to cash out {0} bling has been submitted.
-m_support_adjust = Adjustment made by Whirled staff, <a href="/people-{1}">{0}</a>.
+m_support_adjust = Adjustment made by Whirled staff, <a href="/#people-{1}">{0}</a>.
