--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -31,7 +31,7 @@ ipfUsed = In use
 ipShopFor = Want more cool stuff?
 ipToCatalog = Shop!
 
-panelNoItems = You have no {0} items. Click "Shop" above to buy some!
+panelNoItems = You have no {0} items or none that match your search. Click "Shop" above to buy some!
 panelCreateNew = Upload...
 
 msgItemDeleted = Item deleted.
