Add member name and create button to the galleries list page.  Swap a few things to use new FlowPanels while I'm at it.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -52,6 +52,8 @@ selfRoomCommented = commented
 
 # Gallery messages
 
+galleryListTitle = {0}''s Galleries
+galleryCreate = Create gallery
 profileGallery = Pictures of {0}
 saveButton = Save
 editButton = Edit
