--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -88,6 +88,7 @@ user_input_required = Unable to read from WebMail site
 max_webmail_attempts = Too many import attempts in a short period.  Please wait a few mintues and \
   try again.
 gallery_does_not_exist = Gallery does not exist.
+member_does_not_exist = Player not found.
 
 #
 # Money messages
