Add ability to delete galleries

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -56,7 +56,10 @@ galleryListTitle = {0}''s Galleries
 galleryCreate = Create gallery
 profileGallery = Pictures of {0}
 saveButton = Save
-editButton = Edit
+galleryEditButton = Edit
+galleryDeleteButton = Delete
+galleryConfirmDelete = Are you sure you want to delete this gallery?
+galleryDeleted = Gallery deleted.
 emptyGallery = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
  about the nature of emptiness.
 galleryAddPhotos = Add Some Photos!
