Display a special error message when a search matches nothing.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -23,7 +23,7 @@ remixItemTitle = Remix Item
 
 ipfTitle = Show:
 ipfAll = All
-ipfUploaded = Uploaded
+ipfUploaded = Uploaded  
 ipfPurchased = Purchased
 ipfUnused = Not in use
 ipfUsed = In use
@@ -31,7 +31,8 @@ ipfUsed = In use
 ipShopFor = Want more cool stuff?
 ipToCatalog = Shop!
 
-panelNoItems = You have no {0} items or none that match your search. Click "Shop" above to buy some!
+panelNoItems = You have no {0} items. Click "Shop" above to buy some!
+panelNoMatches = No items match the query: {0}
 panelCreateNew = Upload...
 
 msgItemDeleted = Item deleted.
