--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -180,6 +180,8 @@ cashOutState = State
 cashOutPostalCode = Zip Code
 cashOutCountry = Country
 cashOutEmailsDontMatch = The PayPal email addresses do not match.  Please make sure the email address is correct.
+cashOutAmountWorth = Worth: {0}
+cashOutBelowMinimum = You cannot cash out until you have at least {0} bling.
 
 deductTip = Deduct coins:
 deductButton = Deduct
