Replaced AVRG tick box with an entry in the game type drop down * Added enum for GameType, amply documented that game type is not the same as match type and   AVRG is in addition to match types * Reforumlated list box handling code to mostly use MatchType.values() and ordinal() * Fixed problem with a changing list box selection doing various odd things * Removed no longer necessary text, we need some help text for game types at some point later

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -22,7 +22,7 @@ currency2 = bling
 gameType0 = Pre-matched Table
 gameType1 = Sit Down Table
 gameType2 = Party
-
+gameType3 = AVRG
 #
 # Item types
 
