Show a different blurb based on what report you've chosen.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -129,9 +129,12 @@ passportPlayerNotFound = The player was not found.
 #
 # Transaction history
 
-moneyTip = This page displays everything you need to know about the coins and bars that you''ve \
-           been earning and spending in Whirled.
-barsTip = Earning coins takes time.<br/>Get bars right now!
+tipCoins = TODO: Earn coins by playing games or selling items for coins.
+tipBars = TODO: Earn bars by...
+tipBling = TODO: Earn bling by...
+tipCreator = TODO: Only shows shop sales...
+
+billingTip = Earning coins takes time.<br/>Get bars right now!
 
 transactionsTitle = Transactions
 transactionsNone = No recent transactions of this type
