--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -129,10 +129,20 @@ passportPlayerNotFound = The player was not found.
 #
 # Transaction history
 
-tipCoins = TODO: Earn coins by playing games or selling items for coins.
-tipBars = TODO: Earn bars by...
-tipBling = TODO: Earn bling by...
-tipCreator = TODO: Only shows shop sales...
+tipCoins = Coins are earned by playing most <a href="/#games">games</a>, selling items in the \
+           <a href="/#shop">shop</a> or earning <a href="/#passport">passport stamps</a>. \
+           <a href="http://wiki.whirled.com/Coins">Learn more about coins</a>.
+
+tipBars = Bars are the faster way to get all the cool stuff you want! Bars are \
+          <a href="{0}">available for purchase here</a> using credit card, paypal, store cards and \
+          other methods. <a href="http://wiki.whirled.com/Bars">Learn more about Bars</a>.
+
+tipBling = Bling is earned by creators when they sell items priced in Bars. Bling can be turned \
+           into Bars or cashed out as real money! \
+           <a href="http://wiki.whirled.com/Bling">Learn more about Bling</a>.
+
+tipCreator = Your coin and Bling earnings from <a href="http://wiki.whirled.com/Portal:Creator"> \
+             creating and selling</a> items in the shop.
 
 billingTip = Earning coins takes time.<br/>Get bars right now!
 
