Ability to cancel a pending bling cashout.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -195,6 +195,7 @@ cashOutCountry = Country
 cashOutEmailsDontMatch = The PayPal email addresses do not match.  Please make sure the email address is correct.
 cashOutAmountWorth = Worth: {0}
 cashOutBelowMinimum = You cannot cash out until you have at least {0} bling.
+cancelCashOutSuccess = Successfully cancelled your pending cash out request.
 
 deductTip = Deduct coins:
 deductButton = Deduct
