More small enhancements to gallery editing, and revamp the photo view to remove gallery info and set the url when changing photos so these pages can be bookmarked and will appear in the history.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -54,28 +54,35 @@ selfRoomCommented = commented
 
 galleryListTitle = {0}''s Galleries
 galleryCreate = Create gallery
-profileGallery = Pictures of {0}
-saveButton = Save
-galleryEditButton = Edit
-galleryDeleteButton = Delete
-galleryConfirmDelete = Are you sure you want to delete this gallery?
-galleryDeleted = Gallery deleted.
-emptyGallery = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
+
+galleryEmpty = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
  about the nature of emptiness.
 galleryAddPhotos = Add Some Photos!
 galleryNoPhotosSelf = You don''t have any pictures in this gallery yet.
 galleryProfileNoPhotosSelf = You don''t have any pictures in your profile gallery yet.
 galleryNoPhotosOther = There are no pictures in this gallery.
 galleryNotFound = not find gallery.
-newGallery = New Gallery
-onePhoto = 1 Photo
-photoCount = {0} Photos
+
+galleryNewName = New Gallery
+galleryProfileName = Pictures of {0}
+galleryDescDefault = <enter description>
+galleryOnePhoto = 1 Photo
+galleryPhotoCount = {0} Photos
 galleryNoThumbnail = drag image here
+
 gallerySlideshowStart = Slideshow
 gallerySlideshowStop = Stop Slideshow
+galleryBack = Up to Gallery
+galleryFullSize = (View full size)
 galleryViewAll = View All Galleries
 galleryPhotoListTitle = Your Photos
-galleryUploadPhotos = Upload Photos
+galleryUploadPhotos = (Upload More Photos)
 galleryDragInstructions1 = Drag images from below to add them to this Gallery.
 galleryDragInstructions2 = (Drag outside this box to remove them.)
+
+gallerySaveButton = Save
+galleryEditButton = Edit
+galleryDeleteButton = Delete
+galleryConfirmDelete = Are you sure you want to delete this gallery?
+galleryDeleted = Gallery deleted.
 
