Rabbit hole of my own making. Nobody woulda been the wiser had I not decided to do this. I guess good things will come of it, if you don't have the flash client open. - Rolled back part of that last change, MoneyResult -> BlingExchangeResult - Created BalanceInfo, which can be used to communicate updated balances   to GWT. - Created InsufficientFundsException to GWT, containing a BalanceInfo. - If we get that trying to buy, update our displayed balances! - Ditched modifyMoney in MoneyLogic, because it created a weird place   where we had to catch an exception we know will never happen. Just   do what we need to do. - Cleanup, added some TODOS

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -47,8 +47,6 @@ item_listed = This item is listed in the shop. You must delete the shop \
 hit_sales_limit = Oops. That item is limited edition and it has sold out.
 cant_self_crossbuy = You may not buy from yourself using the opposite currency.
 
-insufficient_flow = Oops. You don''t have enough coins. Earn coins by playing games!
-insufficient_gold = Oops. You don''t have enough bars.
 list_super_item = In order to list sub items in the shop, the parent item must first be listed.
 cost_updated = The price for this item has been updated.  Please refresh the page to see the \
   newest price.
@@ -93,7 +91,7 @@ member_does_not_exist = Player not found.
 #
 # Money messages
 
-insufficient_bling = Oops. You don''t have enough bling.
+insufficient_funds = Oops. You don''t have enough funds to perform that operation.
 already_cashed_out = You cannot cash out bling until your current request has been fulfilled.
 below_minimum_bling = You cannot cash out less than 500 bling.
 
