Fixed some bugs on the galleries.  If you try to create a second profile gallery (through use of the back button, eg), the first one will be overwritten.  Galleries are once again live and set to be visible in production during the next release.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -61,7 +61,7 @@ galleryAddPhotos = Add Some Photos!
 galleryNoPhotosSelf = You don''t have any pictures in this gallery yet.
 galleryProfileNoPhotosSelf = You don''t have any pictures in your profile gallery yet.
 galleryNoPhotosOther = There are no pictures in this gallery.
-galleryNotFound = not find gallery.
+galleryNotFound = Could not find gallery.
 
 galleryNewName = New Gallery
 galleryProfileName = Pictures of {0}
