Touched-up the ui on the remix-before-you-buy pop-up dialog.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -96,7 +96,7 @@ limitedPurchases = {0} of {1}
 #
 # BuyRemixPanel
 buyRemixTitle = Buy this remix?
-buyRemixPrompt = To save this remix, you must buy this item.
+buyRemixPrompt = You must buy this item to save your changes.
 
 #
 # FavoritesPanel
