Let's actually tell them how to turn on javascript instead of pointing them at an empty wiki page.

--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -23,7 +23,7 @@
       <noscript><blockquote>
           Whirled requires JavaScript to operate. Please turn it on in your browser.
           <p>If you would like more information, please read our instructions on
-          <a href="http://wiki.whirled.com/How_To_Enable_JavaScript">how to turn on JavaScript</a>.
+          <a href="http://wiki.whirled.com/JavaScript">how to turn on JavaScript</a>.
       </blockquote></noscript>
   </div>
 
