Use MsoyUI to create these links for correct frames/popups.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -130,7 +130,7 @@ passportPlayerNotFound = The player was not found.
 # Transaction history
 
 tipCoins = Coins are earned by playing most <a href="/#games">games</a>, selling items in the \
-           <a href="/#shop">shop</a> or earning <a href="/#passport">passport stamps</a>. \
+           <a href="/#shop">shop</a> or earning <a href="/#me-passport">passport stamps</a>. \
            <a href="http://wiki.whirled.com/Coins">Learn more about coins</a>.
 
 tipBars = Bars are the faster way to get all the cool stuff you want! Bars are \
