Fixed URL typo.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -141,7 +141,7 @@ tipBling = Bling is earned by creators when they sell items priced in Bars. Blin
            into Bars or cashed out as real money! \
            <a href="http://wiki.whirled.com/Bling">Learn more about Bling</a>.
 
-tipCreator = Your coin and Bling earnings from <a href="http://wiki.whirled.com/Portal:Creator"> \
+tipCreator = Your coin and Bling earnings from <a href="http://wiki.whirled.com/Portal:Creators"> \
              creating and selling</a> items in the shop.
 
 billingTip = Earning coins takes time.<br/>Get bars right now!
