Make the user confirm the irreversible exchange from bling to bars

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -167,6 +167,7 @@ exchangeBlingDescription = This will allow you to exchange a portion of your bli
 	amount in bars.
 exchangeAmount = Bling to Exchange:
 exchangeButton = Exchange for Bars
+exchangeConfirm = Are you sure you want to exchange {0} Bling into {0} Bars? This cannot be reversed!
 
 blingInvalidAmount = You must specify an amount of at least 1 bling.
 blingExchangeSuccessful = Your bling has been exchanged for bars successfully.
