Have the link to a whirled's discussions be "<name> Discussions" and the link to the whirled's detail page just be "<name>" instead of the other way around.

--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -59,7 +59,7 @@ btnAttach = Attach Item
 #
 # ForumPanel
 
-groupThreadListHeader = {0} Discussions
+groupThreadListHeader = Discussions
 msgUnreadThreadsHeader = Threads with New Messages
 
 groupThreadPosts = Posts
@@ -93,6 +93,8 @@ tlpLockedTip = Locked Thread
 
 #
 # ThreadPanel
+
+threadTitle = {0} Discussions:
 
 threadReplyHeader = Reply to: {0}
 
