Correct MessageBundling for badges.  Unfortunately, there are a bunch of pre-bundled UserActions persisted that won't display correctly now.  They'll look like this once players have access to their transactions page:
"Award for earning the Invalid key: badgelevel_0 with 0 params. badge."

instead of:

"Award for earning the Landscape Painter I badge."

I played around with some fake bundling backwards-compatability, and didn't come up with anything
terribly tasteful.  I vote we just let those old transactions slide, and move forward with the 
new hotness.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -201,33 +201,23 @@ interest7 = Favorite Books:
 interest8 = About Me:
 
 #
-# Badge level flavor text
-
-badgelevel_0 = I
-badgelevel_1 = II
-badgelevel_2 = III
-badgelevel_3 = IV
-badgelevel_4 = V
-badgelevel_5 = VI
-
-#
 # Badge names
 
-badge_3aa0bef4 = Fixture
-badge_c4fd834b = Friendly
-badge_3ca5a071 = Outspoken
-badge_e6a0e95b = Contender
-badge_8a19eba3 = Collector
-badge_7f70d917 = Gamer
-badge_ac95aafe = Ironman
-badge_fa58270b = Magnet
-badge_e6af01a4 = Judge
-badge_1923c147 = Shopper
-badge_26873aba = Merchant
-badge_325f4c9 = Artisan
-badge_117171d7 = Landscape Painter
-badge_f0c035cd = Furniture Builder
-badge_6e67007d = Character Designer
+badge_3aa0bef4 = Fixture {0}
+badge_c4fd834b = Friendly {0}
+badge_3ca5a071 = Outspoken {0}
+badge_e6a0e95b = Contender {0}
+badge_8a19eba3 = Collector {0}
+badge_7f70d917 = Gamer {0}
+badge_ac95aafe = Ironman {0}
+badge_fa58270b = Magnet {0}
+badge_e6af01a4 = Judge {0}
+badge_1923c147 = Shopper {0}
+badge_26873aba = Merchant {0}
+badge_325f4c9 = Artisan {0}
+badge_117171d7 = Landscape Painter {0}
+badge_f0c035cd = Furniture Builder {0}
+badge_6e67007d = Character Designer {0}
 
 #
 # Badge descriptions
@@ -309,7 +299,7 @@ m_invited_friend_joined = Award for inviting <a href="/people-{1}">{0}</a> to Wh
 m_transfer_from_guest = Transferred coins from your guest account when you registered.
 m_created_account = Some coins for you to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
-m_earned_badge = Award for earning the {1} {0} badge.
+m_earned_badge = Award for earning the {0} badge.
 m_bought_bars = Bought bars for {0}.
 m_cashed_out = Cashed out for {0}.
 m_exchanged_for_bars = Exchanged for bars.
