More cosmetic changes to the galleries.  Last round I hope... this is production-enabled and set to go up in the next release.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -73,7 +73,7 @@ galleryNoThumbnail = drag image here
 gallerySlideshowStart = Slideshow
 gallerySlideshowStop = Stop Slideshow
 galleryBack = Up to Gallery
-galleryFullSize = (View full size)
+galleryFullSize = full size
 galleryViewAll = View All Galleries
 galleryPhotoListTitle = Your Photos
 galleryUploadPhotos = (Upload More Photos)
