Use the global translations for currencies based on DynamicMessages and Currency.getKey().

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -12,9 +12,9 @@
 #
 # Currency translations
 
-currency0 = coins
-currency1 = bars
-currency2 = bling
+m.coins = Coins
+m.bars = Bars
+m.bling = Bling
 
 #
 # Game match-making types
