Added label equivalents to currency messages.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -12,9 +12,13 @@
 #
 # Currency translations
 
-m.coins = Coins
-m.bars = Bars
-m.bling = Bling
+l.coins = Coins
+l.bars = Bars
+l.bling = Bling
+
+m.coins = coins
+m.bars = bars
+m.bling = bling
 
 #
 # Game match-making types
