- Put currency first, then cost. - Add a tip/blurb next to currency explaining what it means to list in each.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -81,6 +81,9 @@ doListStrategy = Strategy:
 doListCost = Cost:
 doListSalesTarget = Sales Target:
 doListHdrPrice = Listing cost:
+doListCurrency = Currency:
+doListCurrencyTip = List in coins to be paid coins on each sale, list in bars to be paid bling. \
+   Users can buy your item using either currency.
 
 doListBtnGo = List it!
 doUpdateBtnGo = Update it!
