Link to your galleries page in the blurb section of photo inventory.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -89,10 +89,10 @@ catIntro15 = Not used.
 # Item tips
 
 itemUploadTitle1 = Upload your Images!
-itemUploadPitch1a = - Use them to \
-  <a href="http://wiki.whirled.com/Edit_Your_Room">decorate your room</a>
+itemUploadPitch1a = - Create <a href="#people-galleries_@MEMBER_ID@">photo galleries!</a>
 itemUploadPitch1b = - Upload a picture for <a href="#people-@MEMBER_ID@">your Profile</a>
-itemUploadPitch1c = - Coming soon: create and share photo albums
+itemUploadPitch1c = - Use them to \
+  <a href="http://wiki.whirled.com/Edit_Your_Room">decorate your room</a>
 
 itemUploadTitle2 = Upload your Stories!
 itemUploadPitch2a = - Do it for <a href="#world">the kids</a>!
